# RoomBot

./: .coveragerc  .gitignore  LICENSE.md  Makefile  README.md  dev.env  docker-compose.yml  docker-dev.env  requirements.txt  secrets.enc  test.env
backend/: Dockerfile  createStaffAndRooms.py  generate_reports.py  mappings.py  populate_reservations.py  pyproject.toml  requirements-dev.txt  requirements.txt  send_mail.py
backend/backend/: admin.py  settings.py  urls.py
backend/config/: roombaht-nginx.conf  roombaht-systemd.conf  roombaht-wsgi.ini  wordylyst.md
backend/party/: __init__.py  models.py  serializers.py  views.py
backend/party/migrations/: 0001_initial.py  0002_alter_party_description.py
backend/reservations/: apps.py  auth.py  checks.py  config.py  constants.py  emailer.py  helpers.py  ingest_models.py  ledger.py  models.py  reporting.py  serializers.py  views.py
backend/reservations/fixtures/: test_rooms.yaml  test_users.yaml
backend/reservations/management/: __init__.py
backend/reservations/migrations/: 0001_initial.py  0001_reservations.py  0002_hardrock.py  0002_initial.py  0002_room_check_in_out_setters.py  0003_hardrock.py  0003_staff.py  0004_alter_room_is_art_alter_room_is_comp_and_more.py  0007_swap.py  (+6 more)
backend/scripts/: fix_swap.py  massage_csv.py  roombaht-oob.cron  roombaht-oob.sh
backend/tavern/: tavern_utils.py  test_admin.tavern.yml  test_admin_load.yaml  test_guests.tavern.yml  test_login.tavern.yml  test_reports.tavern.yml  test_room_swap.tavern.yml
backend/waittime/: __init__.py  models.py  serializers.py  views.py
(+115 files in other folders)
