[project]
name = "roombot-backend"
version = "0.1.0"
description = "Room selektor swapper party goer application backend at your service"
readme = "../README.md"
requires-python = ">=3.10.18"
dependencies = [
    "asgiref==3.5.2",
    "aws-secretsmanager-caching==1.1.3",
    "blessed==1.19.1",
    "boto3==1.35.34",
    "bpython==0.23",
    "certifi==2022.9.24",
    "charset-normalizer==2.1.1",
    "curtsies==0.4.0",
    "cwcwidth==0.1.7",
    "django==4.1.1",
    "django-cors-headers==3.13.0",
    "django-dirtyfields==1.9.2",
    "djangorestframework==3.14.0",
    "djangorestframework-simplejwt==5.2.1",
    "ec2-metadata==2.13.0",
    "fuzzywuzzy==0.18.0",
    "greenlet==1.1.3",
    "idna==3.4",
    "ipython>=8.37.0",
    "jinja2==3.1.4",
    "psycopg2==2.9.10",
    "pydantic==2.4.2",
    "pygments==2.13.0",
    "pyjwt==2.5.0",
    "python-levenshtein==0.23.0",
    "pytz==2022.4",
    "pyxdg==0.28",
    "requests==2.28.1",
    "setuptools==68.2.2",
    "six==1.16.0",
    "sqlparse==0.4.3",
    "urllib3==1.26.12",
    "uwsgi==2.0.27",
    "wcwidth==0.2.5",
    "wheel==0.37.1",
]

[dependency-groups]
dev = [
    "coverage==7.6.4",
    "gdown==4.7.1",
    "ipdb==0.13.13",
    "lorem-text==2.1",
    "names-generator==0.1.0",
    "pyyaml==6.0.2",
    "tavern==2.11.0",
]
